Ventana de pedidos casi lista

--- a/src/app/administrador/components/logged/children/usuarios/usuarios.component.html
+++ b/src/app/administrador/components/logged/children/usuarios/usuarios.component.html
@@ -1,6 +1,6 @@
 <div class="row h-100 background" style="margin: auto;">
 
-    <app-modal [icon]="iconoModal" [message]="mensaje" [showing]="showModal" [type]="tipoModal" (ondismiss)="dialogDismiss($event)"></app-modal>
+    <app-modal [message]="mensaje" [showing]="showModal" [type]="tipoModal" (ondismiss)="dialogDismiss($event)"></app-modal>
 
 
     <div class="col-md-12 mt-5">
