--- a/src/app/logged/components/agregar/components/agregar-pedido/agregar-pedido.component.html
+++ b/src/app/logged/components/agregar/components/agregar-pedido/agregar-pedido.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3" style="z-index: 2;">
         <app-dropdown id="clientes" [id]="'clientes'" [opciones]="opcionesClientes" [datos]="clientes" [titulo]="'Seleccionar cliente'" (childClickedEvent)="recibirCliente($event)"></app-dropdown>
     </div>
     <div class="col-md-3">
