--- a/src/app/logged/components/pedidos/pedidos.component.css
+++ b/src/app/logged/components/pedidos/pedidos.component.css
@@ -59,7 +59,8 @@ input[type="radio"] {
     color: #061058;
     max-height: 16em;
     border-radius: 2em;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .header {
@@ -96,7 +97,7 @@ th {
 
 .precio {
     font-weight: 500;
-    width: 30%;
+    width: 20%;
     display: inline-block;
 }
 
@@ -108,6 +109,44 @@ th {
 
 .pedido {
     font-weight: 500;
-    width: 20%;
+    width: 30%;
     display: inline-block;
+}
+
+@media(min-width: 720px) {
+    .nombre {
+        width: 30%;
+    }
+    .precio {
+        width: 20%;
+    }
+    .cantidad {
+        width: 20%;
+    }
+    .pedido {
+        width: 30%;
+    }
+}
+
+.button-aceptar {
+    font-weight: 600;
+    width: 50%;
+    background-color: #0000AF;
+    border: none;
+    color: white;
+    border-radius: 32px;
+    transition-duration: .2s;
+    outline: none;
+}
+
+.button-aceptar:hover {
+    box-shadow: 0px 10px 64px 0px rgba(6, 16, 88, 0.3);
+}
+
+.cosa::after {
+    background-color: white;
+}
+
+.cosa::before {
+    background-color: #0000AF;
 }
