--- a/src/app/logged/components/pedidos/pedidos.component.html
+++ b/src/app/logged/components/pedidos/pedidos.component.html
@@ -1,4 +1,7 @@
 <div class="row h-100 background" style="margin: auto;">
+    <div style="z-index: 3;">
+        <app-modal [showing]="showingModal" [message]="messageModal" [type]="tipoModal" (onDismiss)="dismissed()"></app-modal>
+    </div>
     <div class="col-md-12 text-center">
         <div class="row m-4 justify-content-center">
             <div class="col-md-8 boton-container">
@@ -33,13 +36,9 @@
                         <td class="cantidad" align="center">{{producto.cantidadProducto}}</td>
                         <td class="pedido" align="center">
                             <div class="custom-control custom-switch">
-                                <input type="checkbox" class="custom-control-input" [id]="'switch' + i" (change)="productoStatusChanged($event, i)">
+                                <input type="checkbox" class="custom-control-input" [id]="'switch' + i" (change)="productoStatusChanged($event, i)" [disabled]="!pendienteCompletado">
                                 <label class="custom-control-label cosa" [for]="'switch' + i"></label>
                             </div>
-                            <!-- <input class="form-check-input" type="checkbox" [value]="i" [id]="i" (change)="cajaSelected($event)">
-                            <label class="form-check-label" for="defaultCheck1">
-                               Pedido
-                            </label> -->
                         </td>
                     </tr>
 
@@ -48,7 +47,7 @@
         </div>
         <div class="row justify-content-center mt-5">
             <div class="col-md-8 text-center">
-                <button class="btn button-aceptar" (click)="button()">Marcar pedido como completado</button>
+                <button *ngIf="pendienteCompletado" class="btn button-aceptar" (click)="completarPedido()">Marcar pedido como completado</button>
             </div>
         </div>
     </div>
