--- a/src/app/logged/components/resumen/resumen.component.css
+++ b/src/app/logged/components/resumen/resumen.component.css
@@ -1,14 +1,34 @@
-.background {
-    padding-top: 55px;
-    padding-bottom: 900px;
-    background: rgb(240, 240, 246);
-    background: linear-gradient(0deg, rgba(240, 240, 246, 1) 0%, rgba(255, 255, 255, 1) 100%);
+* {
+    font-family: 'Poppins', sans-serif;
+    color: #061058;
 }
 
-.categorias-container {
-    display: flex;
-    overflow-x: auto;
-    filter: drop-shadow(0px 40px 64px rgba(6, 16, 88, 0.3));
+.background {
+    /* padding-top: 55px;
+    padding-bottom: 600px; */
+    background: rgb(202, 217, 243);
+    background: linear-gradient(0deg, rgba(202, 217, 243, 1) 0%, rgba(234, 242, 255, 1) 100%);
+}
+
+.borde { 
+    border: 1px solid red;
+}
+
+.button-grupo {
+    background-color: white;
+}
+
+.first {
+    border-radius: 2em 0em 0em 2em !important;
+}
+
+.last {
+    border-radius: 0em 2em 2em 0em !important;
+}
+
+.active {
+    background-color: #0000AF;
+    color: white;
 }
 
 .card-resumen {
@@ -18,7 +38,6 @@
     max-height: 25em;
     font-weight: 600;
     border: none;
-    z-index: 0;
     border-radius: 32px 32px 32px 32px;
     box-shadow: 0px 80px 64px -1px rgba(6, 16, 88, 0.17);
 }
@@ -31,42 +50,4 @@
 .fondo {
     border-radius: 32px 32px 0 0;
     background-color: #0000AF;
-}
-
-.chip {
-    display: inline-block;
-    height: 32px;
-    font-size: 13px;
-    font-weight: 500;
-    color: #061058;
-    line-height: 32px;
-    padding: 0 12px;
-    border-radius: 16px;
-    background-color: white;
-    margin-bottom: 5px;
-    margin-right: 5px;
-    cursor: pointer;
-    transition: .2s;
-}
-
-.chip:hover {
-    background-color: #EEEEEE;
-}
-
-.chip:active {
-    background-color: #EEEEEE;
-}
-
-.abarca {
-    width: 100%;
-}
-
-@media (min-width: 720px) {
-    .hola {
-        width: 100%;
-        height: auto;
-    }
-    .abarca {
-        width: 50%;
-    }
 }
