--- a/src/app/logged/components/resumen/resumen.component.css
+++ b/src/app/logged/components/resumen/resumen.component.css
@@ -31,6 +31,7 @@
 }
 
 .last-other {
+    max-width: 50%;
     border-radius: 0em 2em 2em 0em !important;
 }
 
@@ -53,6 +54,7 @@
 }
 
 .card-resumen {
+    visibility: collapse;
     color: #061058;
     font-family: 'Poppins', sans-serif;
     display: block;
@@ -63,6 +65,11 @@
     box-shadow: 0px 80px 64px -1px rgba(6, 16, 88, 0.17);
 }
 
+.sombra {
+    /* box-shadow:; */
+    filter: drop-shadow( 0px 80px 64px -1px rgba(6, 16, 88, 0.17));
+}
+
 .title {
     font-weight: 600;
     color: #DCF8FF;
@@ -71,4 +78,8 @@
 .fondo {
     border-radius: 32px 32px 0 0;
     background-color: #0000AF;
+}
+
+.visible {
+    visibility: visible;
 }
