--- a/src/app/logged/components/resumen/resumen.component.html
+++ b/src/app/logged/components/resumen/resumen.component.html
@@ -1,7 +1,7 @@
-<div class="row h-100 background borde" style="margin: auto;">
+<div class="row h-100 background borde sombra" style="margin: auto;">
     <div class="col-md-12 text-center borde mt-2">
         <div class="row justify-content-center">
-            <div class="col-md-6">
+            <div class="col-md-6 animate__animated animate__zoomIn animate__faster">
                 <div class="btn-group flex-wrap" role="group" aria-label="Botones">
                     <button class="btn button-grupo first" (click)="changeTipo('ganancias')" [ngClass]="shouldBeActive('ganancias') ? 'active' : ''">Ganancias</button>
                     <button class="btn button-grupo" (click)="changeTipo('pedidos')" [ngClass]="shouldBeActive('pedidos') ? 'active' : ''">Pedidos</button>
@@ -13,11 +13,12 @@
         <br>
         <div class="row justify-content-center">
             <div class="col-md-6 text-center borde">
-                <div class="card card-resumen" *ngIf="shouldBeActive('ganancias')">
+                <div class="card card-resumen" [ngClass]="shouldBeActive('ganancias') ? 'visible' : ''">
                     <div class="card-header" style="background-color: rgba(0, 0, 0, 0); border-width: 0px">
                         <div class="btn-group" role="group" aria-label="Cosas">
-                            <button class="btn btn-grupo first-other" (click)="getGanancias()">Último mes</button>
-                            <button class="btn btn-grupo last-other">Desde hace:</button>
+                            <button class="btn btn-grupo first-other" (click)="getGanancias()" [ngClass]="ultimoMesDesdeHace ? 'active': ''">Último mes</button>
+                            <input #cajaFechaDesde class="btn btn-grupo last-other" type="date" (input)="getGanancias($event)">
+                            <!-- <button class="btn btn-grupo last-other" (click)="getGanancias('1')" [ngClass]="ultimoMesDesdeHace ? '' : 'active'">Desde hace:</button> -->
                         </div>
                     </div>
                     <div class="card-body">
