--- a/src/app/logged/components/resumen/resumen.component.css
+++ b/src/app/logged/components/resumen/resumen.component.css
@@ -5,7 +5,7 @@
 
 .background {
     padding-top: 55px;
-    padding-bottom: 600px;
+    padding-bottom: 900px;
     background: rgb(202, 217, 243);
     background: linear-gradient(0deg, rgba(202, 217, 243, 1) 0%, rgba(234, 242, 255, 1) 100%);
 }
@@ -64,6 +64,12 @@
     box-shadow: 0px 80px 64px -1px rgba(6, 16, 88, 0.17);
 }
 
+@media(max-width: 720px) {
+    .card-resumen {
+        margin-bottom: 2em;
+    }
+}
+
 .sombra {
     /* box-shadow:; */
     filter: drop-shadow( 0px 80px 64px -1px rgba(6, 16, 88, 0.17));
@@ -80,9 +86,19 @@
 }
 
 .invisible {
-    visibility: hidden;
+    display: none;
 }
 
 .visible {
-    visibility: visible;
+    display: flex;
+}
+
+.list-item {
+    border-width: 0;
+    transition-duration: 0.2s;
+    cursor: pointer;
+}
+
+.list-item:hover {
+    background-color: #EEEEFF;
 }
