--- a/src/app/logged/components/perfil/perfil.component.html
+++ b/src/app/logged/components/perfil/perfil.component.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            <button class="btn boton" (click)="uploadImage()">Aceptar</button>
+                            <button class="btn boton" (click)="uploadImage(imgInput)">Aceptar</button>
                         </div>
                     </div>
                 </div>
