--- a/src/app/administrador/components/logged/children/inicio/inicio.component.html
+++ b/src/app/administrador/components/logged/children/inicio/inicio.component.html
@@ -1,9 +1,5 @@
 <div class="row h-100 background" style="margin: auto;">
-    <div class="col-md-12 borde">
-        hola crack
+    <div class="col-md-12">
+        <h2>Inicio</h2>
     </div>
 </div>
-
-<!-- <div class="container borde">
-    hola
-</div> -->
